--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <button class="btn bg-bike-primary text-white">Purchase</button>
           </div>
           <div class="flex-1">
-            <img src="/images/slider/bike1.png" class="w-[400px]" />
+            <img src="./images/slider/bike1.png" class="w-[400px]" />
           </div>
         </div>
         <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
